fix broken css

--- a/style.scss
+++ b/style.scss
@@ -215,7 +215,17 @@ img {
   vertical-align: middle;
   text-align: center;
 }
-
+@media screen and (max-width: 640px) {
+  .site-name {
+    margin: auto;
+    color: #333;
+    cursor: pointer;
+    font-family: Poppins;
+    font-weight: 300;
+    font-size: 24px;
+    letter-spacing: 1px;
+  }
+}
 @media screen and (max-width: 640px) {
   .site-description {
     padding-left: .2em;
